# driftkit

./: .gitignore  README  design.md  pyproject.toml  running.md
driftkit/: __init__.py  __main__.py
driftkit/core/: drift_api.py  report.py  stats_api.py
