[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftkit"
version = "0.1.0"
description = "Lightweight dataset metadata and drift tracker (Parquet-first)."
readme = "README"
requires-python = ">=3.10"
dependencies = [
    "pyarrow>=14.0.0,<16.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
driftkit = "driftkit.__main__:main"
